--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+
+
 .App {
   text-align: center;
 }
@@ -35,4 +37,39 @@
   to {
     transform: rotate(360deg);
   }
+  
 }
+
+/* Tailwind CSS example */
+.bg-light-grey {
+  background-color: #f0f0f0;
+}
+
+.text-orange {
+  color: #ff9800;
+}
+
+.text-orange-dark {
+  color: #e68a00;
+}
+
+.text-orange-darker {
+  color: #cc7a00;
+}
+
+/* To make sure the body takes up at least 100% of the viewport height */
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex: 1;
+}
+
